Fix styling alignment of drag-drop components

--- a/src/components/project/projectDraggableComponents/ProjectComponentsList.css
+++ b/src/components/project/projectDraggableComponents/ProjectComponentsList.css
@@ -1,5 +1,7 @@
 .component-list-container {
+    display:inline-block
     widows: 100%;
     height: 200px;
     background-color: grey;
+    float: left;
 }
